<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">中大地圖</string>
    <string name="search_title">Search</string>
    <string name="close">關閉</string>
    <string name="submit_title">Submit</string>
    <string name="front_security_post">前門警衛室</string>
    <string name="back_security_post">後門警衛室</string>
    <string name="military_education_office">軍訓室</string>
    <string name="emergency_number">緊急聯絡電話</string>
    <string name="healthCenter">衛生保健組</string>
    <string name="network_unreachable">無法連線</string>
    <string name="open_network_message">您必須要有網路連線，才能使用中大地圖，請至設定中開啟行動網路或是Wi-Fi。</string>
    <string name="cancel">取消</string>
    <string name="network_settings">設定</string>
    <string name="query_hint">請輸入人名或單位名稱</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="version_name">v0.0.6</string>

</resources>
