<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#E6E5C4">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_view" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" >
        <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/grid_view"
            android:columnWidth="100dp"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:verticalSpacing="5dp"
            android:horizontalSpacing="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/version_name"
            android:textColor="#66000000"
            android:focusable="false"
            android:clickable="false" />

        </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emergency_text"
        android:textAppearance="?android:textAppearanceMedium"
        android:gravity="center"
        android:text="@string/emergency_number"
        android:background="#dddddd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_bar"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:background="#eeeeee"
        style="?android:buttonBarStyle">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/military_button"
            android:text="@string/military_education_office"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/front_security_button"
            android:text="@string/front_security_post"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/back_security_button"
            android:text="@string/back_security_post"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/health_button"
            android:text="@string/healthCenter"
            style="?android:buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>
